{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 497,
  "lineage": "95da2c4c-8c08-9a2c-ede0-b6b32e8af8b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d0def24be0d27d6",
            "arn": "arn:aws:ec2:us-west-2:234838246915:instance/i-048cfaa5e7cd1774d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048cfaa5e7cd1774d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef2602c799cf51f1",
            "private_dns": "ip-10-0-1-231.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.231",
            "public_ip": "44.230.66.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-031e03b095afbc9a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-087f8b90323c390db",
            "tags": {
              "Name": "terraform15_ec2_for_public_subnet1_az1"
            },
            "tags_all": {
              "Name": "terraform15_ec2_for_public_subnet1_az1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01cd821b25d586f22"
            ]
          },
          "dependencies": [
            "aws_security_group.devVPC_sg_allow_ssh_http",
            "aws_subnet.public_subnet_az1",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sandbox_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234838246915:internet-gateway/igw-0de5fd181a956d0ea",
            "id": "igw-0de5fd181a956d0ea",
            "owner_id": "234838246915",
            "vpc_id": "vpc-0d3607117486a2e3c"
          },
          "dependencies": [
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpress_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:234838246915:loadbalancer/app/wordpress-lb/0d8261c1ab9cd28a",
            "arn_suffix": "app/wordpress-lb/0d8261c1ab9cd28a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordpress-lb-2019989025.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:234838246915:loadbalancer/app/wordpress-lb/0d8261c1ab9cd28a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c045cbf87f5755d0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08442450a4f5de915"
              },
              {
                "subnet_id": "subnet-087f8b90323c390db"
              }
            ],
            "subnets": [
              "subnet-08442450a4f5de915",
              "subnet-087f8b90323c390db"
            ],
            "tags": {
              "Name": "wordpress-lb"
            },
            "tags_all": {
              "Name": "wordpress-lb"
            },
            "vpc_id": "vpc-0d3607117486a2e3c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public_subnet_az1",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wordpress_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:234838246915:listener/app/wordpress-lb/0d8261c1ab9cd28a/8e2d49c27dff5597",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:234838246915:targetgroup/wordpress-target-group/fd4f9025e1555a78",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:234838246915:listener/app/wordpress-lb/0d8261c1ab9cd28a/8e2d49c27dff5597",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:234838246915:loadbalancer/app/wordpress-lb/0d8261c1ab9cd28a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.wordpress_lb",
            "aws_lb_target_group.wordpress_target_group",
            "aws_security_group.load_balancer_sg",
            "aws_subnet.public_subnet_az1",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:234838246915:targetgroup/wordpress-target-group/fd4f9025e1555a78",
            "arn_suffix": "targetgroup/wordpress-target-group/fd4f9025e1555a78",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:234838246915:targetgroup/wordpress-target-group/fd4f9025e1555a78",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d3607117486a2e3c"
          },
          "dependencies": [
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "wordpress_attachment_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:234838246915:targetgroup/wordpress-target-group/fd4f9025e1555a78-20230721125622182500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:234838246915:targetgroup/wordpress-target-group/fd4f9025e1555a78",
            "target_id": "i-048cfaa5e7cd1774d"
          },
          "dependencies": [
            "aws_instance.wordpress_instance",
            "aws_lb_target_group.wordpress_target_group",
            "aws_security_group.devVPC_sg_allow_ssh_http",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.sandbox_vpc",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_rt_az1_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0de5fd181a956d0ea",
            "id": "r-rtb-0b6a981f30838958a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b6a981f30838958a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sandbox_igw",
            "aws_route_table.public_rt_az1",
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_rt_az2_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0de5fd181a956d0ea",
            "id": "r-rtb-0e8ee0df5cf1f94971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e8ee0df5cf1f9497",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sandbox_igw",
            "aws_route_table.public_rt_az2",
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234838246915:route-table/rtb-04b4f9e1348bf1f36",
            "id": "rtb-04b4f9e1348bf1f36",
            "owner_id": "234838246915",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d3607117486a2e3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234838246915:route-table/rtb-0b3d0bf03e6d81fef",
            "id": "rtb-0b3d0bf03e6d81fef",
            "owner_id": "234838246915",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d3607117486a2e3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234838246915:route-table/rtb-0b6a981f30838958a",
            "id": "rtb-0b6a981f30838958a",
            "owner_id": "234838246915",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de5fd181a956d0ea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d3607117486a2e3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234838246915:route-table/rtb-0e8ee0df5cf1f9497",
            "id": "rtb-0e8ee0df5cf1f9497",
            "owner_id": "234838246915",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de5fd181a956d0ea",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d3607117486a2e3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091776e4224472240",
            "route_table_id": "rtb-04b4f9e1348bf1f36",
            "subnet_id": "subnet-0b4def53a45ca7f4e"
          },
          "dependencies": [
            "aws_route_table.private_rt_az1",
            "aws_subnet.private_subnet_az1",
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047016b63fc82b403",
            "route_table_id": "rtb-0b3d0bf03e6d81fef",
            "subnet_id": "subnet-052ba51adffa0c59e"
          },
          "dependencies": [
            "aws_route_table.private_rt_az2",
            "aws_subnet.private_subnet_az2",
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf51e8d857093491",
            "route_table_id": "rtb-0b6a981f30838958a",
            "subnet_id": "subnet-087f8b90323c390db"
          },
          "dependencies": [
            "aws_route_table.public_rt_az1",
            "aws_subnet.public_subnet_az1",
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02009919d0ee34078",
            "route_table_id": "rtb-0e8ee0df5cf1f9497",
            "subnet_id": "subnet-08442450a4f5de915"
          },
          "dependencies": [
            "aws_route_table.public_rt_az2",
            "aws_subnet.public_subnet_az2",
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devVPC_sg_allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234838246915:security-group/sg-01cd821b25d586f22",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01cd821b25d586f22",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devVPC_terraform_vpc_allow_ssh_http",
            "name_prefix": "",
            "owner_id": "234838246915",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devVPC_terraform_sg_allow_ssh_http"
            },
            "tags_all": {
              "Name": "devVPC_terraform_sg_allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3607117486a2e3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234838246915:security-group/sg-0c045cbf87f5755d0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c045cbf87f5755d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load-balancer-sg-20230721125618704700000001",
            "name_prefix": "load-balancer-sg-",
            "owner_id": "234838246915",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d3607117486a2e3c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devVPC_egress_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3240113070",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01cd821b25d586f22",
            "security_group_rule_id": "sgr-0c3a3f46ec46b0f17",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devVPC_sg_allow_ssh_http",
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devVPC_http8080_ingress_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-2408761329",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cd821b25d586f22",
            "security_group_rule_id": "sgr-0aa5ca08f7f679298",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devVPC_sg_allow_ssh_http",
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devVPC_http_ingress_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-240568855",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cd821b25d586f22",
            "security_group_rule_id": "sgr-0f2d1691910305518",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devVPC_sg_allow_ssh_http",
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "devVPC_ssh_ingress_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3101464482",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01cd821b25d586f22",
            "security_group_rule_id": "sgr-0d22c44ea97f9db22",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.devVPC_sg_allow_ssh_http",
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234838246915:subnet/subnet-0b4def53a45ca7f4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4def53a45ca7f4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234838246915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d3607117486a2e3c"
          },
          "dependencies": [
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234838246915:subnet/subnet-052ba51adffa0c59e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052ba51adffa0c59e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234838246915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d3607117486a2e3c"
          },
          "dependencies": [
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234838246915:subnet/subnet-087f8b90323c390db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087f8b90323c390db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234838246915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d3607117486a2e3c"
          },
          "dependencies": [
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234838246915:subnet/subnet-08442450a4f5de915",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08442450a4f5de915",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234838246915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d3607117486a2e3c"
          },
          "dependencies": [
            "aws_vpc.sandbox_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sandbox_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:234838246915:vpc/vpc-0d3607117486a2e3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08340ea0d0076d08e",
            "default_route_table_id": "rtb-08c1c247c1a103170",
            "default_security_group_id": "sg-0815bec7a9c7454e5",
            "dhcp_options_id": "dopt-034811f86b09b2402",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d3607117486a2e3c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c1c247c1a103170",
            "owner_id": "234838246915"
          }
        }
      ]
    }
  ]
}